--- a/index.html
+++ b/index.html
@@ -283,22 +283,24 @@
     <div class="full-contact">
       <div class="contact-left-data">
         <div class="contact-img">
-          <img src="hand.jpg">
+          <img src="./images/contact2.webp">
         </div>
         <h2>Neha Pawar</h2>
-        <p>I am available for freelance work. Connect with me via and call in to my account.</p>
+        <p>I am available for freelance Work, Clint 
+          Projects and Collaboration.
+        </p>
         <div class="phone-id">
           <h4>Phone: <span>+91 9921861161</span></h4>
           <h4>Email: <span>itsnehu123@gmail.com</span></h4>
         </div>
-        <span>Find With Me</span>
+        <span>Reach Out To Me</span>
         <div class="contact-logos">
-          <a href="" target="_blank"><i class='fa-brands fa-linkedin'></i></a>
-          <a href="" target="_blank"><i class='fa-brands fa-github'></i></a>
-          <a href="" target="_blank"><i
+          <a href="https://www.linkedin.com/in/neha-pawar-871a3a241" target="_blank"><i class='fa-brands fa-linkedin'></i></a>
+          <a href="https://github.com/Neeha0824" target="_blank"><i class='fa-brands fa-github'></i></a>
+          <a href="https://instagram.com/its_nehu123?igshid=NGExMmI2YTkyZg==" target="_blank"><i
               class='fa-brands fa-instagram'></i></a>
-          <a href="" target="_blank"><i
-              class='fa-brands fa-facebook'></i></a>
+          <a href="https://wa.me/+919921861161" target="_blank"><i class='fab fa-whatsapp'></i></a>
+          
         </div>
       </div>
 
